Added to .gitignore:  CPSC* aps2012XXXX.* except for .tex file of same name

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .DS_Store
 CPSC*
+aps2012_template_LaTeX.aux
+aps2012_template_LaTeX.fdb_latexmk
+aps2012_template_LaTeX.fls
+aps2012_template_LaTeX.log
+aps2012_template_LaTeX.pdf
+aps2012_template_LaTeX.synctex.gz
